
 * Add support for includes in configuration files.
   (#1216, Jelmer Vernooĳ)

 * Support timeouts for HTTP client operations.  (Jelmer Vernooĳ)

 * Add support for ``reset --mixed`` and ``reset --soft`` modes in
   ``porcelain.reset()`` and the CLI. Mixed reset updates HEAD and index
   but leaves working tree unchanged. Soft reset only updates HEAD.
   (Jelmer Vernooĳ)

 * Add ``prune`` method to object stores for cleaning up orphaned temporary
   pack files. This is now called by ``garbage_collect()`` to match Git's
   behavior. Also added ``prune`` command to ``dulwich.porcelain``.
   (Jelmer Vernooĳ, #558)

 * Fix ``porcelain.remove()`` to work correctly when called from a directory
   other than the repository root. Relative paths are now interpreted as
   relative to the repository root rather than the current working directory.
   (Jelmer Vernooĳ, #821)

 * Add support for auto garbage collection, and invoke from
   some porcelain commands. (Jelmer Vernooĳ, #1600)

 * Add ``filter-branch`` support to ``dulwich.porcelain`` and
   ``dulwich.filter_branch`` module for rewriting commit history.
   Supports filtering author, committer, and message fields.
   (#745, Jelmer Vernooĳ)

 * Add ``mv`` porcelain command. (Jelmer Vernooĳ, #1633)

0.23.0	2025-06-21

 * Add basic ``rebase`` subcommand. (Jelmer Vernooĳ)

 * Add ``gc`` command to ``dulwich.porcelain.`` (Jelmer Vernooĳ, #92)

 * Add ``unpack-objects`` plumbing command to unpack objects from pack files
   into loose objects in the repository. This command extracts all objects
   from a pack file and writes them to the object store as individual files.
   Available in both ``dulwich.porcelain.unpack_objects()`` and as a CLI
   command ``dulwich unpack-objects``. (Jelmer Vernooĳ)

 * Add ``merge-tree`` plumbing command to ``dulwich.porcelain`` and CLI.
   This command performs three-way tree merges without touching the working
   directory or creating commits, similar to ``git merge-tree``. It outputs